--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
         <div class="menu">
             <a href="./index.html" class="menu-item">Home</a>
             <a href="./resources.html" class="menu-item">Resources</a>
-            <a href="./blog.html" class="menu-item">Blog</a>
-            <a href="./contribute.html" class="menu-item">Contribute</a>
+            <a href="./blog.html" class="menu-incactive">Blog</a>
+            <a href="./contribute.html" class="menu-incactive">Contribute</a>
             <a href="./about.html" class="menu-item" id="activemenu">About Us</a>
           </div>
       </div>
@@ -31,7 +31,7 @@
       <div class="profile">
         <img src="./Images/IMG_8926.jpg" alt="Evan's profile image">
         <p class="profilename">Evan Fisher</p>
-        <p class="profileinfo">Lead Forecaster</p>
+        <p class="profileinfo">Lead Forecaster / Developer</p>
         <p class="profileinfo">Asheville, NC</p>
       </div>
       <div class="profile">
