--- a/resources.html
+++ b/resources.html
@@ -17,8 +17,8 @@
         <div class="menu">
             <a href="./index.html" class="menu-item">Home</a>
             <a href="./resources.html" class="menu-item" id="activemenu">Resources</a>
-            <a href="./blog.html" class="menu-item">Blog</a>
-            <a href="./contribute.html" class="menu-item">Contribute</a>
+            <a href="./blog.html" class="menu-incactive">Blog</a>
+            <a href="./contribute.html" class="menu-incactive">Contribute</a>
             <a href="./about.html" class="menu-item">About Us</a>
           </div>
       </div>
