--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
         <div class="menu">
             <a href="./index.html" class="menu-item" id="activemenu">Home</a>
             <a href="./resources.html" class="menu-item">Resources</a>
-            <a href="./blog.html" class="menu-item">Blog</a>
-            <a href="./contribute.html" class="menu-item">Contribute</a>
+            <a href="./blog.html" class="menu-incactive">Blog</a>
+            <a href="./contribute.html" class="menu-incactive">Contribute</a>
             <a href="./about.html" class="menu-item">About Us</a>
           </div>
       </div>
     </div>
     <div id="homeimage">
-      <div class="imagecircles" onclick="newImg(0)" id="img0"></div>
+      <!-- <div class="imagecircles" onclick="newImg(0)" id="img0"></div>
       <div class="imagecircles" onclick="newImg(1)" id="img1"></div>
       <div class="imagecircles" onclick="newImg(2)" id="img2"></div>
       <div class="imagecircles" onclick="newImg(3)" id="img3"></div>
       <div class="imagecircles" onclick="newImg(4)" id="img4"></div>
-      <div class="imagecircles" onclick="newImg(5)" id="img5"></div>
+      <div class="imagecircles" onclick="newImg(5)" id="img5"></div> -->
     </div>
     <div id="primaryselection">
-      <div class="primaryflex">
+      <p style="width:max-content;">Please be patient as we continue to develop ForWNC.org<br/>Helene accelerated our launch timeline, and many pages are not yet complete</p>
+      <!-- <div class="primaryflex">
         <p>We didn't plan to launch so soon</p>
       </div>
       <div class="primaryflex">
@@ -40,7 +41,7 @@
       </div>
       <div class="primaryflex">
         <p>and neither does this one!</p>
-      </div>
+      </div> -->
     </div>
     <script type="text/javascript" src="./main.js"></script>
   </body>
