--- a/about.html
+++ b/about.html
@@ -25,7 +25,8 @@
     </div>
     <div id="about1">
       <p id="slogan">For WNC, By WNC</p>
-      <p id="aboutdescription">We're a small, tight-knit team serving the many communities of Western North Carolina with honest, no-nonsense weather forecasts. Our primary mission is to help you know what to expect before you leave the house during high impact weather events.<br><br>We aren't ready to launch the forecasting side of ForWNC, but in light of Helene's severe impact on WNC, we've decided to utilize this platform for sharing post-storm analyses.</p>
+      <p id="aboutdescription">We're a small, tight-knit team serving the many communities of Western North Carolina with honest, no-nonsense weather forecasts. Our primary mission is to help you know what to expect before you leave the house during high impact weather events.</p>
+      <p id="aboutdescription">We aren't ready to launch the forecasting side of ForWNC, but in light of Helene's severe impact on WNC, we've decided to utilize this platform for sharing post-storm analyses.</p>
     </div>
     <div id="aboutimages">
       <div class="profile">
@@ -42,7 +43,9 @@
       </div>
     </div>
     <div id="comingsoon">
-      <p>ForWNC will be a new organization providing hyperlocal weather forecasts for WNC locals, by WNC locals.<br/>We weren't ready for launch when Helene rolled in, but given the circumstances, we're doing a soft launch with limited Helene-related products.<br/>Be sure to check back later to learn about how we'll be serving the community with forecasts and real-time reporting.</p>
+      <p>ForWNC will be a new organization providing hyperlocal weather forecasts for WNC locals, by WNC locals.</p>
+      <p>We weren't ready for launch when Helene rolled in, but given the circumstances, we're doing a soft launch with limited Helene-related products.</p>
+      <p>Be sure to check back later to learn about how we'll be serving the community with forecasts and real-time reporting.</p>
     </div>
     <script type="text/javascript" src="./main.js"></script>
   </body>
