--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <div class="imagecircles" onclick="newImg(5)" id="img5"></div> -->
     </div>
     <div id="primaryselection">
-      <p style="width:max-content;">Please be patient as we continue to develop ForWNC.org<br/>Helene accelerated our launch timeline, and many pages are not yet complete</p>
+      <p>Please be patient as we develop ForWNC.org</p>
+      <p>Helene accelerated our launch timeline, and many pages are not yet complete</p>
       <!-- <div class="primaryflex">
         <p>We didn't plan to launch so soon</p>
       </div>
