--- a/resources/swannanoa-flooding.html
+++ b/resources/swannanoa-flooding.html
@@ -58,14 +58,17 @@
               <br>
               <div class='slider-pair'>
                 <div class="continuous-labels">
-                  <p>Major Damage</p>
-                  <p>Minor Damage</p>
+                  <p>More Damage</p>
+                  <p>Less Damage</p>
                 </div>
                 <img src="../Images/swannanoa-building-legend.png" alt="building footprint legend" class="continuous-legend">
               </div>
           </div>
       </div>
       <div id="map"></div>
+      <p>This map portrays the estimated extent and depth of flooding in Swannanoa, North Carolina.</p>
+      <p>The precise depth of the floodwaters is hidden at this time as we evaluate the accuracy of our flood indundation model.</p>
+      <p>Please note that these results are preliminary. The extent of the floodwaters and the building impacts may change during further analysis.</p>
     </div>
     <script type="text/javascript" src="../main.js"></script>
     <script type="text/javascript" src="../js/swannanoa-flooding.js"></script>
