--- a/resources/swannanoa-flooding.html
+++ b/resources/swannanoa-flooding.html
@@ -28,7 +28,7 @@
     </div>
     <div id="mainbody">
       <div id="opacity-control" class="opacity-control">
-          <button id="opacity-toggle" class="control-button">☰</button>
+          <div id="opacity-toggle" class="control-button">☰</div>
           <div id="opacity-slider-container" class="slider-container">
               <!-- <p id="opacity-slider-title">Opacity Controls</p> -->
               <div class='slider-pair'>
@@ -46,7 +46,7 @@
           </div>
       </div>
       <div id="legend-control" class="legend-control">
-          <button id="legend-toggle" class="control-button">i</button>
+          <div id="legend-toggle" class="control-button">i</div>
           <div id="legend-slider-container" class="slider-container">
               <div class='slider-pair'>
                 <div class="continuous-labels">
@@ -66,9 +66,11 @@
           </div>
       </div>
       <div id="map"></div>
-      <p>This map portrays the estimated extent and depth of flooding in Swannanoa, North Carolina.</p>
-      <p>The precise depth of the floodwaters is hidden at this time as we evaluate the accuracy of our flood indundation model.</p>
-      <p>Please note that these results are preliminary. The extent of the floodwaters and the building impacts may change during further analysis.</p>
+      <div id="map-info">
+        <p>This map portrays the estimated extent and depth of flooding in Swannanoa, North Carolina.</p>
+        <p>The precise depth of the floodwaters is hidden at this time as we evaluate the accuracy of our flood indundation model. We have noted some inacurracies in the damage estimate, so please view the imagery basemap for a true depiction of the observed damage.</p>
+        <p>Please note that these results are preliminary. The extent of the floodwaters and the building impacts may change during further analysis.</p>
+      </div>
     </div>
     <script type="text/javascript" src="../main.js"></script>
     <script type="text/javascript" src="../js/swannanoa-flooding.js"></script>
