--- a/resources/helene-media-map.html
+++ b/resources/helene-media-map.html
@@ -50,28 +50,19 @@
           </div>
         </div>
         <div id="map-container">
-          <div id="opacity-control" class="opacity-control">
-              <div id="opacity-toggle" class="control-button"><img src="../Images/icon-map-layers.png" alt="legend icon"></div>
-              <div id="opacity-slider-container" class="slider-container">
-              </div>
-          </div>
           <div id="info-control" class="info-control">
               <a href="#map-info" class="section-link"><div id="info-toggle" class="control-button">i</div></a>
-          </div>
-          <div id="legend-control" class="legend-control">
-              <div id="legend-toggle" class="control-button"><img src="../Images/icon-map-legend.png" alt="legend icon"></div>
-              <div id="legend-slider-container" class="slider-container">
-              </div>
           </div>
           <div id="map"></div>
         </div>
       </div>
       <div id="map-info-container">
         <div id="map-info">
-          <p>This map portrays the estimated extent and depth of flooding in Swannanoa, North Carolina.</p>
-          <p>The precise depth of the floodwaters is hidden at this time as we evaluate the accuracy of our flood indundation model. We have noted some inacurracies in the damage estimate, so please view the imagery basemap for a true depiction of the observed damage.</p>
-          <p>Please note that these results are preliminary. The extent of the floodwaters and the building impacts may change during further analysis.</p>
-          <p>Direct all questions to <a href="https://twitter.com/EFisherWX">Evan Fisher (@EFisherWX) on Twitter/X</a>.</p>
+          <p>Each report was sourced from Twitter/X and geolocated to provide a sense of scale following the devestation wrought by Hurricane Helene.</p>
+          <p>Residents in the Southern Appalachians were brought to their knees by the storm, but they did not stay there for long. Countless volunteers brought supplies and donated their time to help us regain our footing. It will be months and even years before many areas see a return to normal, but these people are the very definition of resilient.</p>
+          <p>Please continue to support those who lost everything in the months to come. We will share some ways that you can help on this page shortly. Thank you to everyone who has loved on our region over the past month. Your generosity will not be forgotten.</p>
+          <p>Lastly, I want to give a special thank you to <a href="https://twitter.com/jackendrickwx" target="_blank">Jack Kendrick</a> who faithfully assisted in the geolocation of many of these reports.</p>
+          <p>Direct all questions to <a href="https://twitter.com/EFisherWX" target="_blank">Evan Fisher</a> (@EFisherWX) on Twitter/X.</p>
         </div>
       </div>
     </div>
