--- a/resources.html
+++ b/resources.html
@@ -7,6 +7,13 @@
     <title></title>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "oq73j71mqx");
+    </script>
   </head>
   <body>
     <div id="header">
@@ -25,6 +32,18 @@
     </div>
     <div id="mainbody">
       <div class="forecast">
+        <a href="./resources/helene-media-map.html">
+          <h2>Helene Damage Reports</h2>
+          <div id="map-container">
+            <img src="./Images/damage-reports-twitter.png" width="100%" height="auto"></img>
+          </div>
+
+          <div id="forecast-discussion">
+            <p>Explore damage reports from Hurricane Helene's passage over the Southern Appalachians on an interactive map.</p>
+          </div>
+        </a>
+      </div>
+      <div class="forecast">
         <a href="./resources/swannanoa-flooding.html">
           <h2>Swannanoa, NC Flood Map</h2>
           <div id="map-container">
@@ -32,7 +51,6 @@
           </div>
 
           <div id="forecast-discussion">
-            <!-- Your text forecast discussion here -->
             <p>See how high the flood waters reached and which buildings were impacted in Swannanoa, NC.</p>
           </div>
         </a>
