--- a/resources.html
+++ b/resources.html
@@ -32,7 +32,19 @@
     </div>
     <div id="mainbody">
       <div class="forecast">
-        <a href="./resources/helene-media-map.html">
+        <a href="./resources/helene-tree-damage">
+          <h2>Helene Severe Tree Damage</h2>
+          <div id="map-container">
+            <img src="./Images/tree-damage-twitter.png" width="100%" height="auto"></img>
+          </div>
+
+          <div id="forecast-discussion">
+            <p>Examine the extent of Hurricane Helene's severe wind damage in the Southern Appalachians on an interactive map.</p>
+          </div>
+        </a>
+      </div>
+      <div class="forecast">
+        <a href="./resources/helene-media-map">
           <h2>Helene Damage Reports</h2>
           <div id="map-container">
             <img src="./Images/damage-reports-twitter.png" width="100%" height="auto"></img>
@@ -44,7 +56,7 @@
         </a>
       </div>
       <div class="forecast">
-        <a href="./resources/swannanoa-flooding.html">
+        <a href="./resources/swannanoa-flooding">
           <h2>Swannanoa, NC Flood Map</h2>
           <div id="map-container">
             <img src="./Images/swannanoa-flooding-map.png" width="100%" height="auto"></img>
