--- a/resources/helene-tree-damage.html
+++ b/resources/helene-tree-damage.html
@@ -51,10 +51,9 @@
         <p style="position: absolute; top: 0.7vh; right: 1vh; margin: 0; font-weight: bold; text-decoration: underline; font-size: 2.5vh;" onclick="document.getElementById('popup-alert').style.display='none'">x</p>
         <p style="margin-top: 5vh;">To view high-resolution data, please load this webpage on a computer with a larger screen.</p>
       </div>
-      <div id="opacity-control" class="opacity-control">
+      <!-- <div id="opacity-control" class="opacity-control">
           <div id="opacity-toggle" class="control-button"><img src="../Images/icon-map-layers.png" alt="legend icon"></div>
           <div id="opacity-slider-container" class="slider-container">
-              <!-- <p id="opacity-slider-title">Opacity Controls</p> -->
               <div class='slider-pair'>
                 <p style="text-decoration: underline;margin-left: 4vh;">Layer</p>
                 <p style="text-decoration: underline;margin-right: 4vh;">Opacity</p>
@@ -64,7 +63,7 @@
                 <input type="range" class="opacity-slider" id="damage-opacity-slider" min="0" max="1" step="0.01" value="1">
               </div>
           </div>
-      </div>
+      </div> -->
       <div id="resolution-control" class="resolution-control">
           <div id="resolution-toggle" class="resolution-button">
             <div id="low-res" class="resolution-option active-resolution" style="border-right: 0.1vh solid rgba(0,0,0,0.3);border-radius: 0.7vh 0 0 0.7vh;">
@@ -104,8 +103,9 @@
       <div id="map"></div>
       <div id="map-info-container">
         <div id="map-info">
-          <p>This map portrays an estimate of the extent of severe tree damage in the Southern Appalachians due to Hurricane Helene.</p>
-          <p>Please note that these results are preliminary. The extent and severity of the damage will change during further analysis. In this preliminary map, some harvested fields are unintentionally flagged as tree damage.</p>
+          <p>This map estimates the extent of severe tree damage in the Southern Appalachians due to Hurricane Helene. Severe damage was classified as a 0.15 decrease in NDVI utilizing Sentinel-2 imagery from September 22 (pre-storm) and October 12 (post-storm). The 0.15 threshold aligns with the visible extent of damage in true color imagery.</p>
+          <p>The low end of severe damage correlates with significant defoliation and tree loss around 5%. The high end correlates to complete defoliation and tree loss in excess of 50%.</p>
+          <p>Please note that these results are preliminary. The extent and severity of the damage will change during further analysis. In this preliminary map, some harvested fields are unintentionally flagged as tree damage. Additionally, some small high elevation areas could breach the 0.15 threshold due to fall color change during the study period.</p>
           <p>Direct all questions to <a href="https://twitter.com/EFisherWX">Evan Fisher (@EFisherWX) on Twitter/X</a>.</p>
         </div>
       </div>
