--- a/resources/helene-tree-damage.html
+++ b/resources/helene-tree-damage.html
@@ -103,7 +103,7 @@
       <div id="map"></div>
       <div id="map-info-container">
         <div id="map-info">
-          <p>This map estimates the extent of severe tree damage in the Southern Appalachians due to Hurricane Helene. Severe damage was classified as a 0.15 decrease in NDVI utilizing Sentinel-2 imagery from September 22 (pre-storm) and October 12 (post-storm). The 0.15 threshold aligns with the visible extent of damage in true color imagery.</p>
+          <p>This map estimates the extent of severe tree damage in Western North Carolina due to Hurricane Helene. Severe damage was classified as a 0.15 decrease in NDVI utilizing Sentinel-2 imagery from September 22 (pre-storm) and October 12 (post-storm). The 0.15 threshold aligns with the visible extent of damage in true color imagery.</p>
           <p>The low end of severe damage correlates with significant defoliation and tree loss around 5%. The high end correlates to complete defoliation and tree loss in excess of 50%.</p>
           <p>Please note that these results are preliminary. The extent and severity of the damage will change during further analysis. In this preliminary map, some harvested fields are unintentionally flagged as tree damage. Additionally, some small high elevation areas could breach the 0.15 threshold due to fall color change during the study period.</p>
           <p>Direct all questions to <a href="https://twitter.com/EFisherWX">Evan Fisher (@EFisherWX) on Twitter/X</a>.</p>
