--- a/resources.html
+++ b/resources.html
@@ -31,41 +31,57 @@
       </div>
     </div>
     <div id="mainbody">
-      <div class="forecast">
-        <a href="./resources/helene-tree-damage">
-          <h2>Helene Severe Tree Damage</h2>
-          <div id="map-container">
-            <img src="./Images/tree-damage-twitter.png" width="100%" height="auto"></img>
-          </div>
+      <div class="forecast-pair">
+        <div class="forecast">
+          <a href="./resources/blue-ridge-parkway-closures">
+            <h2>Blue Ridge Parkway Closures Map</h2>
+            <div id="map-container">
+              <img src="./Images/brp-closure-twitter.png" width="100%" height="auto"></img>
+            </div>
 
-          <div id="forecast-discussion">
-            <p>Examine the extent of Hurricane Helene's severe wind damage in the Southern Appalachians on an interactive map.</p>
-          </div>
-        </a>
+            <div id="forecast-discussion">
+              <p>Find current closure information along the full length of the Blue Ridge Parkway on an interactive map.</p>
+            </div>
+          </a>
+        </div>
+        <div class="forecast">
+          <a href="./resources/helene-tree-damage">
+            <h2>Helene Severe Tree Damage</h2>
+            <div id="map-container">
+              <img src="./Images/tree-damage-twitter.png" width="100%" height="auto"></img>
+            </div>
+
+            <div id="forecast-discussion">
+              <p>Examine the extent of Hurricane Helene's severe wind damage in the Southern Appalachians on an interactive map.</p>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="forecast">
-        <a href="./resources/helene-media-map">
-          <h2>Helene Damage Reports</h2>
-          <div id="map-container">
-            <img src="./Images/damage-reports-twitter.png" width="100%" height="auto"></img>
-          </div>
+      <div class="forecast-pair">
+        <div class="forecast">
+          <a href="./resources/helene-media-map">
+            <h2>Helene Damage Reports</h2>
+            <div id="map-container">
+              <img src="./Images/damage-reports-twitter.png" width="100%" height="auto"></img>
+            </div>
 
-          <div id="forecast-discussion">
-            <p>Explore damage reports from Hurricane Helene's passage over the Southern Appalachians on an interactive map.</p>
-          </div>
-        </a>
-      </div>
-      <div class="forecast">
-        <a href="./resources/swannanoa-flooding">
-          <h2>Swannanoa, NC Flood Map</h2>
-          <div id="map-container">
-            <img src="./Images/swannanoa-flooding-map.png" width="100%" height="auto"></img>
-          </div>
+            <div id="forecast-discussion">
+              <p>Explore damage reports from Hurricane Helene's passage over the Southern Appalachians on an interactive map.</p>
+            </div>
+          </a>
+        </div>
+        <div class="forecast">
+          <a href="./resources/swannanoa-flooding">
+            <h2>Swannanoa, NC Flood Map</h2>
+            <div id="map-container">
+              <img src="./Images/swannanoa-flooding-twitter.png" width="100%" height="auto"></img>
+            </div>
 
-          <div id="forecast-discussion">
-            <p>See how high the flood waters reached and which buildings were impacted in Swannanoa, NC.</p>
-          </div>
-        </a>
+            <div id="forecast-discussion">
+              <p>See how high the flood waters reached and which buildings were impacted in Swannanoa, NC.</p>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="./main.js"></script>
