--- a/resources/post-helene-imagery.html
+++ b/resources/post-helene-imagery.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swannanoa, NC Flood Map - Hurricane Helene Analysis</title>
-    <meta name="description" content="This map portrays the estimated extent and depth of flooding in Swannanoa, North Carolina during Hurricane Helene's passage on September 27, 2024."/>
-    <meta content="Swannanoa, NC Flood Map - Hurricane Helene Analysis" property="og:title"/>
-    <meta content="This map portrays the estimated extent and depth of flooding in Swannanoa, North Carolina during Hurricane Helene's passage on September 27, 2024." property="og:description"/>
+    <title>Post-Helene Satellite Imagery in Buncombe County, NC</title>
+    <meta name="description" content="This map portrays satellite/aerial imagery of Buncombe County, North Carolina before and immediately after Hurricane Helene's passage in September 2024. Post-storm imagery is made available by the Buncombe County GIS Department."/>
+    <meta content="Post-Helene Satellite Imagery in Buncombe County, NC" property="og:title"/>
+    <meta content="This map portrays satellite/aerial imagery of Buncombe County, North Carolina before and immediately after Hurricane Helene's passage in September 2024. Post-storm imagery is made available by the Buncombe County GIS Department." property="og:description"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@EFisherWX" />
-    <meta name="twitter:title" content="Swannanoa, NC Flood Map - Hurricane Helene Analysis"/>
-    <meta name="twitter:description" content="This map portrays the estimated extent and depth of flooding in Swannanoa, North Carolina during Hurricane Helene's passage on September 27, 2024."/>
-    <meta name="twitter:image" content="https://www.forwnc.org/Images/swannanoa-flooding-twitter.png" />
+    <meta name="twitter:title" content="Post-Helene Satellite Imagery in Buncombe County, NC"/>
+    <meta name="twitter:description" content="This map portrays satellite/aerial imagery of Buncombe County, North Carolina before and immediately after Hurricane Helene's passage in September 2024. Post-storm imagery is made available by the Buncombe County GIS Department."/>
+    <meta name="twitter:image" content="https://www.forwnc.org/Images/imagery-twitter.png" />
     <meta property="og:type" content="website"/>
     <meta content="summary_large_image" name="twitter:card"/>
     <meta name="geo.placename" content="United States"/>
